문제 등록하기 여전히 안됨